--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>2021</title>
-
+<meta name="viewport" content="width=device-width,intial-scale=1.0">
 
 </head>
 <body>
@@ -1035,7 +1035,7 @@ function GameCanvas(settings) {
 <script type="text/javascript">
 var gc = new GameCanvas();
 
-var points = textToPoints("亮~祝大家新年快乐", 18, "Anton");
+var points = textToPoints("黎亮亮祝大家新年快乐", 18, "Anton");
 
 
 var titleParticles = [];
